force-app/main/default/objects/Contact/fields/AdditionalCommunityInformationAquired__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCommunityInformationAquired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Community Information Aquired</label>
    <type>Checkbox</type>
</CustomField>