force-app/main/default/objects/Contact/fields/Default_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Communication_Method__c</fullName>
    <inlineHelpText>Preferred method for communication or contact</inlineHelpText>
    <label>Default Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHONE</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>E_MAIL</fullName>
                <label>E-mail</label>
            </value>
            <value>
                <fullName>FAX</fullName>
                <label>Fax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>