force-app/main/default/objects/Contact/fields/Primary_Contact_For_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_For_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact For Account</label>
    <type>Checkbox</type>
</CustomField>