force-app/main/default/objects/Contact/recordTypes/Community_Prospect_Contact.recordType-meta.xml
<RecordType>
    <fullName>Community_Prospect_Contact</fullName>
    <active>true</active>
    <description>This Record type is available for Partner  Community users to create New Prospect Contacts</description>
    <label>Community Prospect Contact</label>
</RecordType>