force-app/main/default/objects/Contact/recordTypes/Community_View_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Community_View_Contacts</fullName>
    <active>true</active>
    <description>This is only available for Community View access to users</description>
    <label>Community View Contacts</label>
</RecordType>